Creation header simple (sélection langue inactive)

--- a/frontend/src/components/Header/Header_style.scss
+++ b/frontend/src/components/Header/Header_style.scss
@@ -1,5 +1,5 @@
-@font-face { font-family: Montserrat; src: url('../assets/font/Montserrat-Regular.ttf'); } 
-@font-face { font-family: Montserrat-Bold; src: url('../assets/font/Montserrat-Bold.ttf'); }  
+@font-face { font-family: Montserrat; src: url('../../assets/font/Montserrat-Regular.ttf'); } 
+@font-face { font-family: Montserrat-Bold; src: url('../../assets/font/Montserrat-Bold.ttf'); }  
 
 .header {
     font-family: Montserrat;
