--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
+@font-face { font-family: Montserrat; src: url('./assets/font/Montserrat-Regular.ttf'); } 
+@font-face { font-family: Montserrat-Bold; src: url('./assets/font/Montserrat-Bold.ttf'); }  
+
 .App {
   text-align: center;
+  font-family: Montserrat;
 }
 
 .App-logo {
