--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -2,10 +2,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 700px;
     &__panel1 {
+        display: flex;
+        flex-direction: column;
         width: 30%;
+        justify-content: center;
     }
     &__panel2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 60%;
     }
     &__maintitle {
