--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -21,13 +21,17 @@
             transition: .6s;
         }
         &--textVisible {
-            opacity:1;
+            //opacity:1;
             font-size: .9em;
-            transition: .6s;
+            //transition: .6s;
+            max-height: 200px; /* Utilisez une valeur suffisamment grande pour couvrir le contenu */
+            transition: max-height 0.6s ease; /* Ajoutez la transition de 0.6s vers le bas */
+            overflow: hidden;
         }
         &--textHidden {
+            max-height: 0;
             opacity:0;
-            transition: .6s;
+            transition: max-height 0.6s ease;
         }
     }
 }
