Utilisation module Block pour les Compétences

--- a/frontend/src/components/Competences/Competences_style.scss
+++ b/frontend/src/components/Competences/Competences_style.scss
@@ -1,6 +1,7 @@
 .competences {
     display: flex;
     flex-direction: column;
+    height: 500px;
     &__list{
         display: flex;
         flex-direction: row;
