--- a/frontend/src/components/Skills/Skills_style.scss
+++ b/frontend/src/components/Skills/Skills_style.scss
@@ -1,7 +1,8 @@
 .skills {
     display: flex;
     flex-direction: column;
-    height: 500px;
+    padding-top: 300px;
+    height: 900px;
     &__list{
         display: flex;
         flex-direction: row;
