--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 900px;
+    padding-top: 300px;
     &__panel1 {
         display: flex;
         flex-direction: column;
