--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -1,7 +1,8 @@
 .services {
     display: flex;
     flex-direction: column;
-    height : 600px;
+    padding-top: 300px;
+    height: 200px;
     &__list{
         display: flex;
         flex-direction: row;
