--- a/frontend/src/components/Header/Header_style.scss
+++ b/frontend/src/components/Header/Header_style.scss
@@ -12,6 +12,7 @@
     top: 0;
     width: 100%;
     background-color: white;
+    z-index: 999;
     &__list{
         display: flex;
         flex-direction: row;
