--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding-top: 350px;
     //height: 200px;
-    height: 100vh;
+    height: 100%;
     &__list{
         display: flex;
         flex-direction: row;
