--- a/frontend/src/components/Generic/Parallax_style.scss
+++ b/frontend/src/components/Generic/Parallax_style.scss
@@ -2,7 +2,8 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 100%; /* Ajustez la hauteur en fonction de vos besoins */
+    height: 150px; /* Ajustez la hauteur en fonction de vos besoins */
+    //object-fit:fill;
   }
   
   .parallax-image {
@@ -13,10 +14,17 @@
     align-items: center;
     transition: transform 0.2s;
     will-change: transform;
+    //object-fit:fill;
   }
   
   .parallax-image img {
     max-width: 100%;
     height: auto;
+    //object-fit:fill;
   }
   
+  .parallax__label {
+    position: relative;
+    top: -200px;
+    right: 1000px;
+  }
