--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: 100vh;
+    background-color: transparent;
     //padding-top: 300px;
     &__panel1 {
         display: flex;
