--- a/frontend/src/components/Generic/Block/Block_style.scss
+++ b/frontend/src/components/Generic/Block/Block_style.scss
@@ -12,26 +12,29 @@
         height: auto;
         &--title {
             font-size: 1em;
+            font-weight: 700;
             max-height: 200px;
             transition: max-height .6s;
             padding: 5px;
+            margin-top: 50px;
         }
         &--titleColored {
+            font-weight: 500;
             background-color: #003063;
             color: white;
             transition: .6s;
         }
         &--textVisible {
-            //opacity:1;
+            opacity:1;
             font-size: .9em;
-            //transition: .6s;
             max-height: 200px; /* Utilisez une valeur suffisamment grande pour couvrir le contenu */
-            transition: max-height 0.6s ease; /* Ajoutez la transition de 0.6s vers le bas */
+            transition: max-height 0.6s ease, opacity 0.6s ease; /* Ajoutez la transition de 0.6s vers le bas */
             overflow: hidden;
         }
         &--textHidden {
             max-height: 0;
             opacity:0;
+            font-size: .9em;
             transition: max-height 0.6s ease;
         }
     }
