--- a/frontend/src/components/Generic/Parallax_style.scss
+++ b/frontend/src/components/Generic/Parallax_style.scss
@@ -4,6 +4,14 @@
     width: 100%;
     height: 150px; /* Ajustez la hauteur en fonction de vos besoins */
     //object-fit:fill;
+    display: flex;
+    align-items: center;
+    //border-top: solid 1px;
+    //border-bottom: solid 1px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    &--title {
+      width:250px;
+    }
   }
   
   .parallax-image {
