--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100vh;
+    height: 80vh;
     background-color: transparent;
-    //padding-top: 300px;
+    padding-top: 100px;
     &__panel1 {
         display: flex;
         flex-direction: column;
