--- a/frontend/src/components/Generic/Card/Card.scss
+++ b/frontend/src/components/Generic/Card/Card.scss
@@ -15,7 +15,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 80%;
+        height: 100%;
         background-color: rgba(0, 48, 99, 0.9); /* Couleur bleue avec 90% de transparence */
         opacity: 0; /* Au départ, le voile est invisible */
         transition: opacity 0.3s; /* Une transition pour une apparition en douceur */
@@ -25,21 +25,39 @@
         justify-content: space-between;
         padding: 5px;
         }
+    &__comment {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        /*&--high {
+            position: relative;
+            bottom: -80%;
+        }
+        &--info {
+            position: relative;
+            right: -20%;
+        }*/
+        &--low {
+            position:relative;
+            top: -20%;
+            background-color:  rgba(0, 48, 99, 0.9);
+            color: white;
+            height: 20%;
+            margin: 0;
+        }
+    }
     &:hover .Card__overlay {
         opacity: 1;
     }
-    &:hover .Card__comment {
-        color: rgba(0, 48, 99, 0.9);
+    &:hover .Card__comment--low {
+        color: transparent;
+        background-color: transparent;
     }
-    &__comment {
-        position:relative;
-        top: -20%;
-        background-color:  rgba(0, 48, 99, 0.9);
-        color: white;
-        height: 20%;
-        margin: 0;
+    &:hover .Card__comment--high {
+        bottom: 0%;
+        transition: bottom 0.8s;
     }
-
 }
 
 
