--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -1,29 +1,45 @@
-//@font-face { font-family: Montserrat; src: url('../../assets/font/Montserrat-Regular.ttf'); } 
-//@font-face { font-family: Montserrat-Bold; src: url('../../assets/font/Montserrat-Bold.ttf'); }  
-
-.PopUpWindow__buttonEnveloppe {
+.button {
     width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: right;
+    height: 100%;
+    background-color: transparent;
+    color: white;
+    padding: 0;
+    z-index: 999;
+    &__text {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        &--descriptionHigh {
+            position: relative;
+            top: 80%;
+        }
+        &--descriptionLow {
+            align-self: flex-end;
+            position: relative;
+            right: 20%;
+            padding-right: 5px;
+            &Arrow {
+                font-size: 12px;
+                size: 12px;
+                color: white;
+                //height: 20%;
+            }
+        }
+    }
+    &:hover .button__text--descriptionHigh {
+        top:0%;
+        transition: top 0.8s ease;
+    }
+    &:hover .button__text--descriptionLow {
+        right: 0%;
+        transition: right 0.8s;
+    }
 }
 
-.PopUpWindow__button {
-    font-family: Montserrat;
-    background-color: transparent;
-    border:none;
-    color: white;
-    position: relative;
-    padding: 0;
-    text-decoration: none;
+.button__text--descriptionLow arrow {
+    font-size: 12px;
 }
 
-:hover .PopUpWindow__button {
-    font-family: Montserrat;
-    background-color: transparent;
-    border:none;
-    color: white;
-    position: relative;
-    padding: 0;
-    text-decoration: underline;
-}
