--- a/frontend/src/components/Generic/Card/Card.scss
+++ b/frontend/src/components/Generic/Card/Card.scss
@@ -1,5 +1,6 @@
 .Card {
     width: 21%;
+    margin:1.5%;
     aspect-ratio: 1/1;
     position: relative;
     overflow: hidden;
@@ -28,16 +29,6 @@
     &__comment {
         width: 100%;
         height: 100%;
-        display: flex;
-        justify-content: space-between;
-        /*&--high {
-            position: relative;
-            bottom: -80%;
-        }
-        &--info {
-            position: relative;
-            right: -20%;
-        }*/
         &--low {
             position:relative;
             top: -20%;
