--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -5,6 +5,7 @@
     color: white;
     padding: 0;
     z-index: 999;
+    cursor: pointer;
     &__text {
         width: 100%;
         height: 100%;
@@ -39,7 +40,8 @@
     }
 }
 
-.button__text--descriptionLow arrow {
-    font-size: 12px;
+.button__text--descriptionLowArrow {
+    width: 20px;
+    color: white;
 }
 
