--- a/frontend/src/components/Projects/Projects_style.scss
+++ b/frontend/src/components/Projects/Projects_style.scss
@@ -8,6 +8,6 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content:center;
     }
 }
