--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -3,8 +3,9 @@
     flex-direction: row;
     justify-content: space-between;
     height: 80vh;
-    background-color: transparent;
-    padding-top: 100px;
+    //background-color: transparent;
+    background-color: white;
+    //padding-top: 100px;
     &__panel1 {
         display: flex;
         flex-direction: column;
