--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -1,9 +1,10 @@
 .services {
     display: flex;
     flex-direction: column;
-    padding-top: 350px;
+    //padding-top: 350px;
     //height: 200px;
     height: 100%;
+    background-color: white;
     &__list{
         display: flex;
         flex-direction: row;
