--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -1,9 +1,9 @@
 .services {
     display: flex;
     flex-direction: column;
+    height: 100vh;
     //padding-top: 350px;
     //height: 200px;
-    height: 100%;
     background-color: white;
     &__list{
         display: flex;
