--- a/frontend/src/components/Generic/Card/Card.scss
+++ b/frontend/src/components/Generic/Card/Card.scss
@@ -8,7 +8,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit:contain;
         border: solid 1px;
     }
     &__overlay {
