--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -46,3 +46,25 @@
     margin-left: 5px;
 }
 
+.modal-90w {
+    width: 80%;
+    max-width: 80%;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: row;
+}
+
+.modal {
+    &__container {
+        width: 50%;
+        &--image {
+            width:100%;
+        }
+    }
+    &__text {
+        width: 50%;
+        padding: 10px;
+    }
+}
