--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -66,5 +66,8 @@
     &__text {
         width: 50%;
         padding: 10px;
+        &--title {
+            font-weight: 800;
+        }
     }
 }
