--- a/frontend/src/components/Generic/Card/Card.scss
+++ b/frontend/src/components/Generic/Card/Card.scss
@@ -4,12 +4,15 @@
     aspect-ratio: 1/1;
     position: relative;
     overflow: hidden;
+    border-top: 1px solid;
     &__image {
         display: block;
         width: 100%;
         height: 100%;
         object-fit:contain;
         border: solid 1px;
+        position : relative;
+        bottom: 10%;
     }
     &__overlay {
         position: absolute;
