--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -13,6 +13,7 @@
         display: flex;
         flex-direction: column;
         justify-content:space-between;
+        padding: 5px;
         &--descriptionHigh {
             position: relative;
             top: 80%;
