--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,14 +5,15 @@
     background-color: transparent;
     background-image: url("../src/assets/image/test.png"), linear-gradient(rgba(243, 244, 245, 1), rgba(243, 244, 245, 1));
     background-attachment: fixed;
-    /*background-size: cover;*/
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-
     height: 100%;
     margin: 0;
     padding: 0;
+    @media(max-width: 600px) {
+        background-image: linear-gradient(#E50D6D, #E50D6D);
+        }
 }
 
 .title {
@@ -20,6 +21,12 @@
     background-color: transparent;
     display: flex;
     align-items: center;
+    @media(max-width: 600px) {
+        color: white;
+        height: 100px;
+        justify-content: center;
+        align-items: center;
+        }
 }
 
 .section {
