--- a/frontend/src/components/Generic/Block/Block_style.scss
+++ b/frontend/src/components/Generic/Block/Block_style.scss
@@ -4,13 +4,20 @@
     margin-top: 50px;
     width: 30%;
     height: auto;
+    @media(max-width: 600px) {
+        margin-top: 0;
+        width: 95%;
+        }
     &__title {
-        font-size: 1em;
+        font-size: 1.2em;
         font-weight: 700;
-        max-height: 200px;
+        max-height: 300px;
         transition: max-height .6s;
         padding: 5px;
         margin-top: 50px;
+        @media(max-width: 600px) {
+            margin: 0;
+            }
     }
     &__titleColored {
         font-weight: 500;
@@ -20,8 +27,8 @@
     }
     &__textVisible {
         opacity:1;
-        font-size: .9em;
-        max-height: 200px; /* Utilisez une valeur suffisamment grande pour couvrir le contenu */
+        font-size: 1.1em;
+        max-height: 300px; /* Utilisez une valeur suffisamment grande pour couvrir le contenu */
         transition: max-height 0.6s ease, opacity 0.6s ease; /* Ajoutez la transition de 0.6s vers le bas */
         overflow: hidden;
     }
