--- a/frontend/src/components/Generic/Card/Card.scss
+++ b/frontend/src/components/Generic/Card/Card.scss
@@ -5,6 +5,18 @@
     position: relative;
     overflow: hidden;
     border-top: 1px solid;
+    @media(max-width: 1600px) {
+        width: 27%;
+        margin: 1.5%;
+        }
+    @media(max-width: 1000px) {
+        width: 45%;
+        margin: 1.5%;
+        }
+    @media(max-width: 600px) {
+        width: 80%;
+        margin: 5%;
+        }
     &__image {
         display: block;
         width: 100%;
@@ -39,6 +51,30 @@
             color: white;
             height: 20%;
             margin: 0;
+            @media(max-width: 2000px) {
+                font-size: 1.4em;
+                }
+            @media(max-width: 1800px) {
+                font-size: 1.2em;
+                }
+            @media(max-width: 1600px) {
+                font-size: 1.3em;
+                }
+            @media(max-width: 1300px) {
+                font-size: 1em;
+                }
+            @media(max-width: 1000px) {
+                font-size: 1.4em;
+                }
+            @media(max-width: 800px) {
+                font-size: 1em;
+                }
+            @media(max-width: 600px) {
+                font-size: 1.2em;
+                }
+            @media(max-width: 400px) {
+                font-size: .8em;
+                }
         }
     }
     &:hover .Card__overlay {
