--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -55,11 +55,17 @@
 .modal-body {
     display: flex;
     flex-direction: row;
+    @media(max-width: 600px) {
+        flex-direction: column;
+    }
 }
 
 .modal {
     &__container {
         width: 50%;
+        @media(max-width: 600px) {
+            width: 100%;
+        }
         &--image {
             width:100%;
         }
@@ -67,6 +73,9 @@
     &__text {
         width: 50%;
         padding: 10px;
+        @media(max-width: 600px) {
+            width: 100%;
+        }
         &--title {
             font-weight: 800;
         }
