--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -3,20 +3,30 @@
     flex-direction: row;
     justify-content: space-between;
     height: 100vh;
-    //background-color: transparent;
     background-color: white;
-    //padding-top: 100px;
+    @media(max-width: 600px) {
+        flex-direction: column;
+        justify-content:center;
+        height: 40vh;
+        }
     &__panel1 {
         display: flex;
         flex-direction: column;
         width: 30%;
         justify-content: center;
+        @media(max-width: 600px) {
+            width: 95%;
+            margin: 10% 0;
+            }
     }
     &__panel2 {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 60%;
+        @media(max-width: 600px) {
+            width: 95%;
+            }
     }
     &__maintitle {
         font-size: 1.5em;
