--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -2,21 +2,37 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    //padding-top: 350px;
-    //height: 200px;
     background-color: white;
+    @media(max-width: 600px) {
+        height: auto;
+        min-height: 40vh;
+        }
     &__list{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        @media(max-width: 600px) {
+            height: auto;
+            min-height: 40vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            justify-content: space-evenly;
+            }
     }
     &__panel{
         width: 30%;
+        @media(max-width: 600px) {
+            width: 95%;
+            }
         &--title {
             font-size: 1em;
             max-height: 50px;
             transition: .6s;
             padding: 5px;
+            @media(max-width: 600px) {
+                width: 95%;
+                }
         }
         &--titleColored {
             background-color: #003063;
