--- a/frontend/src/components/Skills/Skills_style.scss
+++ b/frontend/src/components/Skills/Skills_style.scss
@@ -1,13 +1,24 @@
 .skills {
     display: flex;
     flex-direction: column;
-    //padding-top: 350px;
     height: 100vh;
     background-color: white;
+    @media(max-width: 600px) {
+        min-height: 40vh;
+        height: auto;
+        }
     &__list{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        @media(max-width: 600px) {
+            height: auto;
+            min-height: 40vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            justify-content: space-evenly;
+            }
     }
     &__panel{
         width: 30%;
