--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -55,6 +55,7 @@
 .modal-body {
     display: flex;
     flex-direction: row;
+    text-overflow: ellipsis;
     @media(max-width: 600px) {
         flex-direction: column;
     }
@@ -63,6 +64,7 @@
 .modal {
     &__container {
         width: 50%;
+        text-overflow: ellipsis;
         @media(max-width: 600px) {
             width: 100%;
         }
@@ -73,11 +75,15 @@
     &__text {
         width: 50%;
         padding: 10px;
+        text-overflow: ellipsis;
         @media(max-width: 600px) {
             width: 100%;
         }
         &--title {
             font-weight: 800;
+        }
+        &--url {
+            text-overflow: ellipsis;
         }
     }
 }
