--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     height: 100vh;
     background-color: white;
+    padding: 0 10px;
     @media(max-width: 600px) {
         flex-direction: column;
         justify-content:center;
@@ -26,6 +27,7 @@
         width: 60%;
         @media(max-width: 600px) {
             width: 95%;
+            font-size: .8em;
             }
     }
     &__maintitle {
