--- a/frontend/src/components/Projects/Projects_style.scss
+++ b/frontend/src/components/Projects/Projects_style.scss
@@ -1,7 +1,7 @@
 .projects {
     display: flex;
     flex-direction: column;
-    height: 200vh;
+    height: auto;
     margin: 0;
     padding-bottom: 160 px;
     background-color: white;
@@ -13,6 +13,6 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content:center;
-        margin-top: 200px;
+        margin: 200px 0 100px 0;
     }
 }
