--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100vh;
     background-color: white;
+    padding : 0 10px;
     @media(max-width: 600px) {
         height: auto;
         min-height: 40vh;
@@ -23,7 +24,7 @@
     &__panel{
         width: 30%;
         @media(max-width: 600px) {
-            width: 95%;
+            width: 100%;
             }
         &--title {
             font-size: 1em;
@@ -31,7 +32,7 @@
             transition: .6s;
             padding: 5px;
             @media(max-width: 600px) {
-                width: 95%;
+                width: 100%;
                 }
         }
         &--titleColored {
