--- a/frontend/src/components/Skills/Skills_style.scss
+++ b/frontend/src/components/Skills/Skills_style.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100vh;
     background-color: white;
+    padding: 0 10px;
     @media(max-width: 600px) {
         min-height: 40vh;
         height: auto;
