--- a/frontend/src/components/Projects/Projects_style.scss
+++ b/frontend/src/components/Projects/Projects_style.scss
@@ -13,6 +13,6 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content:center;
-        margin: 200px 0 100px 0;
+        margin: 100px 0;
     }
 }
