--- a/frontend/src/components/Generic/Selector/Selector_style.scss
+++ b/frontend/src/components/Generic/Selector/Selector_style.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 60px;
     border: 1px solid #E50D6D;
-    padding:10px;
+    padding:7px 3px;
     border-radius: 25px;
     max-width: 80%;
     align-self: center;
@@ -20,7 +20,14 @@
         border: none;
         background-color: white;
         color: #E50D6D;
-        padding : 3px 10px;
+        padding : 3px 12px;
+        font-weight: 700;
+        font-size: 1.2em;
+        transition: background-color 0.4s ease, color 0.4s ease; /* Ajoutez cette ligne pour la transition */
+        &--active {
+            background-color: #E50D6D;
+            color:white;
+        }
         @media(max-width: 600px) {
             border: 1px solid #E50D6D;
             margin: 5px 0;
