--- a/frontend/src/components/Generic/Disclaimer/Disclaimer_style.scss
+++ b/frontend/src/components/Generic/Disclaimer/Disclaimer_style.scss
@@ -1,12 +1,13 @@
 .disclaimer {
     background-color: #E50D6D;
     color: white;
-    width: 50%;
+    width: 30%;
     z-index: 999;
     position: fixed;
     top: 80vh;
-    left: 80vw;
+    left: 35%;
     padding: 10px;
+    text-align: center;
     font-weight: bold;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* Ombre pour l'effet en relief */
 }
