--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,16 +2,16 @@
 @font-face { font-family: Montserrat-Bold; src: url('./assets/font/Montserrat-Bold.ttf'); }  
 
 .body {
-    background-color: transparent;
     background-image: url("../src/assets/image/test.png"), linear-gradient(rgba(243, 244, 245, 1), rgba(243, 244, 245, 1));
+    background-blend-mode:luminosity;
     background-attachment: fixed;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:right;
     height: 100%;
     margin: 0;
     padding: 0;
-    @media(max-width: 600px) {
+    @media(max-width: 1200px) {
         background-image: linear-gradient(#E50D6D, #E50D6D);
         }
 }
@@ -21,7 +21,11 @@
     background-color: transparent;
     display: flex;
     align-items: center;
-    @media(max-width: 600px) {
+    color: #E50D6D;
+    font-size: 2.8em;
+    font-weight: 700;
+    text-shadow: 1px 1px 2px pink;
+    @media(max-width: 1200px) {
         color: white;
         height: 100px;
         justify-content: center;
