--- a/frontend/src/components/Generic/Block/Block_style.scss
+++ b/frontend/src/components/Generic/Block/Block_style.scss
@@ -1,23 +1,51 @@
 .block {
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 100px;
     width: 30%;
     height: auto;
+    border: 2px solid #E50D6D;
+    box-shadow: 0px 2px 4px rgba(229, 13, 109, 0.4);
+    //background-color: #003063;
+    //background-image: linear-gradient(rgba(0, 48, 99, 0.7), rgba(0, 48, 99, 0.7));
+    color:#003063;
+    border-radius: 25px;
     @media(max-width: 600px) {
         margin-top: 0;
         width: 100%;
         }
+    &__icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        font-size: 3em;
+        align-content: center;
+        color: #E50D6D;
+        background-color: white;
+        border-radius: 50%;
+        border: 2px solid #E50D6D;
+        width: 115px;
+        aspect-ratio: 1/1;
+        position: absolute;
+        transform: translate(0,-50%);
+
+    }
     &__title {
-        font-size: 1.2em;
+        font-size: 1.5em;
+        align-self: center;
         font-weight: 700;
-        max-height: 300px;
+        height: 60px;
         transition: max-height .6s;
-        padding: 5px;
-        margin-top: 50px;
+        //padding: 10px;
+        margin-top: 80px;
         @media(max-width: 600px) {
             margin: 0;
             }
+    }
+    &__body {
+        font-size: 1.2em;
+        padding: 10px;
     }
     &__titleColored {
         font-weight: 500;
