--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -20,6 +20,7 @@
     height: 150px;
     background-color: transparent;
     display: flex;
+    margin-left: 30px;
     align-items: center;
     color: #E50D6D;
     font-size: 2.8em;
@@ -30,6 +31,7 @@
         height: 100px;
         justify-content: center;
         align-items: center;
+        margin: 0 0 15px 0;
         }
 }
 
