--- a/frontend/src/components/Contact/Contact_style.scss
+++ b/frontend/src/components/Contact/Contact_style.scss
@@ -6,16 +6,27 @@
     font-size: 25px;
     color: #E50D6D;
     padding: 60px 0 60px 60px;
+    @media(max-width: 600px) {
+        padding: 20px;
+    }
     &__item {
         display: flex;
         flex-direction: row;
         align-items: center;
+        @media(max-width: 600px) {
+            width: 95%;
+            }
         &--icon {
             font-size: 40px;
             margin: 20px;
         }
         &--text {
             margin: 0;
+            @media(max-width: 600px) {
+                width: 95%;
+                font: size 18px;
+                overflow:scroll;
+                }
         }
     }
 }
