--- a/frontend/src/components/Presentation/Presentation_style.scss
+++ b/frontend/src/components/Presentation/Presentation_style.scss
@@ -5,10 +5,10 @@
     height: 100vh;
     background-color: white;
     padding: 0 10px;
-    @media(max-width: 600px) {
+    @media(max-width: 800px) {
         flex-direction: column;
         justify-content:center;
-        height: 60vh;
+        height: auto;
         }
     &__panel1 {
         display: flex;
@@ -17,9 +17,10 @@
         justify-content: center;
         background-color: #003063;
         color: white;
-        @media(max-width: 600px) {
+        @media(max-width: 800px) {
             width: 95%;
-            margin: 10% 0;
+            margin: 10% 0 3% 0;
+
             }
     }
     &__panel2 {
@@ -28,7 +29,7 @@
         justify-content: center;
         align-items: center;
         width: 60%;
-        @media(max-width: 600px) {
+        @media(max-width: 800px) {
             width: 95%;
             font-size: .8em;
             }
@@ -39,10 +40,22 @@
     }
     &__maintitle {
         font-size: 2em;
-        margin-left: 10px;
+        margin-left: 20px;
+        @media(max-width: 800px) {
+            text-align: center;
+            width: 95%;
+            //font-size: .8em;
+            margin: 30px 20px 0 20px;
+            }
     }
     &__subtitle {
         font-size: 24px;
-        margin: 40px 0 0 10px;
+        margin: 40px 0 0 20px;
+        @media(max-width: 800px) {
+            width: 95%;
+            text-align: center;
+            //font-size: .8em;
+            margin: 10px 20px 20px 20px;
+            }
     }
 }
