--- a/frontend/src/components/Services/Services_style.scss
+++ b/frontend/src/components/Services/Services_style.scss
@@ -4,7 +4,7 @@
     height: 70vh;
     background-color: white;
     padding : 0 10px;
-    @media(max-width: 600px) {
+    @media(max-width: 1000px) {
         height: auto;
         min-height: 40vh;
         }
@@ -12,12 +12,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        @media(max-width: 600px) {
+        @media(max-width: 1000px) {
             height: auto;
             min-height: 40vh;
             display: flex;
             flex-direction: column;
-            margin: 0;
+            align-items: center;
             justify-content: space-evenly;
             }
     }
