--- a/frontend/src/components/Contact/Contact_style.scss
+++ b/frontend/src/components/Contact/Contact_style.scss
@@ -24,7 +24,7 @@
             margin: 0;
             @media(max-width: 600px) {
                 width: 95%;
-                font: size 18px;
+                font-size: 16px;
                 overflow:scroll;
                 }
         }
