--- a/frontend/src/components/Generic/Modal/Modal.scss
+++ b/frontend/src/components/Generic/Modal/Modal.scss
@@ -50,6 +50,10 @@
 .modal-90w {
     width: 80%;
     max-width: 80%;
+    @media(max-width: 600px) {
+        width: 95%;
+        max-width: 95%;
+    }
 }
 
 .modal-body {
